[project]
name = "parallelproj"
version = "1.8.0"
description = "Python wrappers for parallelproj projectors."
authors = [
    {name = "Georg Schramm", email = "georg.schramm@kuleuven.be"},
]
dependencies = [
    "numpy~=1.22",
    "scipy~=1.0",
    "array-api-compat>=1.5",
    "array-api-strict~=1.0",
    "matplotlib>=3.8.3",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
]

[project.urls]
Homepage = "https://github.com/gschramm/parallelproj"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.1.1",
    "tox>=4.14.1",
    "tox-pdm>=0.7.2",
    "pytest-cov>=4.1.0",
]
[tool.coverage.report]
exclude_lines = [
    "def __repr__",
    "if verbose:",
    "if self._debug:",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "if parallelproj.is_cuda_array",
    "if is_cuda_array",
    "if cuda_present:",
    "def is_cuda_array",
    "def empty_cuda_cache",
    "if num_visible_cuda_devices > 0",
    "if cupy_enabled",
    "lib_parallelproj_c_fname",
    "empty_cuda_cache",
    "__str__"
]

